--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "ollama": "^0.5.17",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
