--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^5.1.0",
     "ollama": "^0.5.17",
     "pg": "^8.16.3",
-    "showdown": "^2.1.0"
+    "showdown": "^2.1.0",
+    "ts-trueskill": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
