--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-VIEW_ENGINE = ejs
-DB_PW = DB_PW
-DB_IP = localhost
-DB_PORT = 5432
-SERVER_NAME = Nigga Server
-PORT = 3000
+OLLAMA_HOST_URL=http://school-server:11434 #comma separated ollama hosts
+OLLAMA_MODEL=gemma3
+DB_IP=school-server
+DB_PW=pw
+DB_PORT=5442
+PORT=3000
