--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -1,7 +1,8 @@
 name: Deployment
 
 on: 
-  push
+  workflow_dispatch:
+  push:
 
 jobs:
   build-and-test:
@@ -20,12 +21,15 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - 
+        id: toLowerCase
+        run: INPUT=${{ github.repository }} echo "::set-output name=lowerCaseValue::${INPUT,,}"
       -
         name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ github.repository }}:latest
+          tags: ${{ steps.toLowerCase.outputs.lowerCaseValue }}:latest
           secrets: |
               GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN  }}
       
