--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -22,16 +22,22 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - 
-        id: toLowerCase
-        run: INPUT=${{ github.repository }} echo "::set-output name=lowerCaseValue::${INPUT,,}"
-      -
-        name: Build and push
-        uses: docker/build-push-action@v6
+        name: Lower case
+        id: string
+        uses: ASzc/change-string-case-action@v6
         with:
-          push: true
-          tags: ${{ steps.toLowerCase.outputs.lowerCaseValue }}:latest
-          secrets: |
-              GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN  }}
+          string: ${{ github.repository }}
+      - 
+        id: step2
+        run: echo ${{ steps.string.outputs.lowercase }}
+      # -
+      #   name: Build and push
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     push: true
+      #     tags: ${{ steps.toLowerCase.outputs.lowerCaseValue }}:latest
+      #     secrets: |
+      #         GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN  }}
       
     # - name: Setup Tailscale
     #   uses: tailscale/github-action@v2
