--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -58,6 +58,9 @@ jobs:
       #     secrets: |
       #       GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN  }}
       - 
+        name: Checkout
+        uses: actions/checkout@v2.3.4
+      - 
         name: Setup Tailscale
         uses: tailscale/github-action@v3
         with:
@@ -69,12 +72,12 @@ jobs:
         name: Deploy to Staging server
         uses: marcodallasanta/ssh-scp-deploy@v1.2.0
         with:
-          local: './'                                                  # Local file path - REQUIRED false - DEFAULT ./
+          local: './compose.yaml'                                                  # Local file path - REQUIRED false - DEFAULT ./
           # remote: 'C:\code\'                                                 # Remote file path - REQUIRED false - DEFAULT ~/
           host: ${{secrets.SSH_HOST}}                                      # Remote server address - REQUIRED true
           user: root                                      # Remote server user - REQUIRED true
           key: ${{secrets.SSH_PRIVATE_KEY}}                                        # Remote server private key - REQUIRED at least one of "password" or "key" 
           # pre_upload: echo "Hello bro !!"  # Command to run via ssh before scp upload - REQUIRED false
           # post_upload: Remove-Item -Path '${{secrets.REMOTE_DIRECTORY }}/compose.yaml'  # Command to run via ssh after scp upload - REQUIRED false
-          # ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          ssh_options: -o StrictHostKeyChecking=no                     # A set of ssh_option separated by -o - REQUIRED false - DEFAULT -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           # scp_options: -v                                              # Flags to use during scp - REQUIRED false - DEFAULT ''
