--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -75,6 +75,6 @@ jobs:
           scp_source: 'compose.yaml'
           scp_target: ${{secrets.REMOTE_DIRECTORY}}
           host: ${{secrets.SSH_HOST}}
-          username: root
+          username: ${{secrets.SSH_USER}}
           private_key: ${{secrets.SSH_PRIVATE_KEY}}
           after_script: docker compose -f ${{secrets.REMOTE_DIRECTORY}}/compose.yaml up -d
