--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Capstone_Project_Proxy"]
-	path = Proxy
+	path = Capstone_Project_Proxy
 	url = https://github.com/Aaren882/Capstone_Project_Proxy.git
