--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -82,4 +82,4 @@ jobs:
           before_script: |
             docker compose -f ${{secrets.REMOTE_DIRECTORY}}/compose.yaml pull
           after_script: |
-            docker compose pull docker compose -f ${{secrets.REMOTE_DIRECTORY}}/compose.yaml up -d
+            docker compose -f ${{secrets.REMOTE_DIRECTORY}}/compose.yaml up -d
