--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -54,6 +54,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             GIT_VERSION_TAG=${{ env.RELEASE_VERSION }}
+            GIT_COMMIT_MESSAGE=${{ github.event.head_commit.message }}
             GIT_VERSION_HASH=${{ github.sha }}
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN  }}
