--- a/.github/workflows/Review.yml
+++ b/.github/workflows/Review.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     types:
       - opened
+      - synchronize
 permissions: write-all
 
 jobs:
@@ -12,7 +13,7 @@ jobs:
     steps:
       - 
         name: Checkout
-        uses: actions/checkout@v5.0.0
+        uses: actions/checkout@v3
 
       - 
         name: Setup Tailscale
