Add secret for translation model

--- a/.github/workflows/Review.yml
+++ b/.github/workflows/Review.yml
@@ -35,4 +35,4 @@ jobs:
           PR_NUMBER: ${{ github.event.pull_request.number }}
           RESPONSE_LANGUAGE: '台灣繁體中文zh-TW'
           MODEL: ${{ secrets.OLLAMA_MODEL }}
-          TRANSLATION_MODEL: 'gemma3'
+          TRANSLATION_MODEL: ${{ secrets.OLLAMA_MODEL_GENERAL }}
