--- a/.github/workflows/Review.yml
+++ b/.github/workflows/Review.yml
@@ -5,6 +5,7 @@ on:
     types:
       - opened
       - synchronize
+permissions: write-all
 
 jobs:
   code_review:
@@ -34,4 +35,4 @@ jobs:
           PR_NUMBER: ${{ github.event.pull_request.number }}
           RESPONSE_LANGUAGE: '台灣繁體中文zh-TW'
           MODEL: ${{ secrets.OLLAMA_MODEL }}
-          TRANSLATION_MODEL: ${{ secrets.OLLAMA_MODEL }}
+          TRANSLATION_MODEL: ${{ secrets.OLLAMA_MODEL_GENERAL }}
