--- a/.github/workflows/Review.yml
+++ b/.github/workflows/Review.yml
@@ -26,13 +26,10 @@ jobs:
       
       - 
         name: Run Ollama Code Review
-        uses: ray5273/ollama-pr-review-action@v1.0.0
+        uses: ./review_bot/action.yaml
         with:
-          OLLAMA_API_URL: ${{ secrets.OLLAMA_ADDRESS }} # Local Ollama server
-          MY_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OWNER: ${{ github.repository_owner }}
-          REPO: ${{ github.event.repository.name }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          RESPONSE_LANGUAGE: '台灣繁體中文zh-TW'
-          MODEL: ${{ secrets.OLLAMA_MODEL }}
-          TRANSLATION_MODEL: ${{ secrets.OLLAMA_MODEL_GENERAL }}
+          OLLAMA-ADDRESS: ${{ secrets.OLLAMA_ADDRESS }} # Local Ollama server
+          file-pattern: "**/*.{js}"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          base-branch: "main"
+          model: ${{ secrets.OLLAMA_MODEL }}
