--- a/.github/workflows/Review.yml
+++ b/.github/workflows/Review.yml
@@ -26,7 +26,7 @@ jobs:
       
       - 
         name: Run Ollama Code Review
-        uses: ./review_bot/action.yaml
+        uses: ./review_bot
         with:
           OLLAMA-ADDRESS: ${{ secrets.OLLAMA_ADDRESS }} # Local Ollama server
           file-pattern: "**/*.{js}"
