--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ DB_IP=school-server
 DB_PW=pw
 DB_PORT=5442
 PORT=3000
+
+DB_DATABASE=School_Test # Production DB
+# DB_DATABASE=School_DEV # DEV 用於開發
+# QUERY_POSTFIX=_DEV # 加個 Postfix 方便判別
